# xcc

./: .gitignore  Makefile.am  README.md  configure.ac  eclipse-dictionary.txt  generate_front_ends.sh
doc/: xcc.doxyfile
doc/xi/: concepts.tex  expressions.tex  lexical.tex  types.tex  xi.tex
m4/: lang.def.m4  tree.def.m4  util.m4
pylar/include/pylar/: lexer_base.hpp  token.hpp  types.hpp
xcc/: .gitignore  Makefile.am  ast.cpp  ast.hpp  ast_builder.cpp  ast_builder.hpp  ast_builder_mangler.cpp  ast_builder_namespace.cpp  ast_context.cpp  ast_context.hpp  ast_eval.cpp  ast_eval.hpp  ast_metadata.cpp  ast_metadata.hpp  ast_printer.cpp  ast_printer.hpp  ast_type.cpp  ast_type.hpp  ast_type_conv.hpp  ast_type_conv_fwd.hpp  ast_type_func.cpp  ast_type_func.hpp  ast_type_fwd.hpp  ast_type_set.cpp  ast_type_set.hpp  check_ast.cpp  check_tree.cpp  cpp_type_traits_ext.hpp  cppdefs.hpp  cstr.cpp  cstr.hpp  error.hpp  frontend.cpp  frontend.hpp  generate_front_ends.sh  ircodegen.cpp  ircodegen.hpp  llvm_metadata.cpp  llvm_metadata.hpp  log.hpp  (+16 more)
xcc/ardvark/: ardvark.y
xcc/cpp/: Makefile.am  cpp.cpp  cpp.hpp  cpp.lang
xcc/xi/: .gitignore  Makefile.am  tree.def  xi-dev.l  xi-dev.y  xi-internal.hpp  xi.cpp  xi.hpp  xi.lang  xi_builder.cpp  xi_builder.hpp  xi_builder_function.cpp  xi_builder_function.hpp  xi_builder_lower_expr.cpp  xi_builder_lower_stmt.cpp  xi_builder_namespace.cpp  xi_builder_struct.cpp  xi_builder_struct.hpp  xi_context.cpp  xi_context.hpp  xi_decl.cpp  xi_decl.hpp  xi_dom.cpp  xi_dom.hpp  xi_internal.hpp  xi_lookup.cpp  xi_lower.cpp  xi_lower.hpp  xi_lower_expr.cpp  xi_lower_stmt.cpp  xi_lower_type.cpp  xi_mangler.cpp  xi_mangler.hpp  xi_metadata.cpp  xi_metadata.hpp  xi_name_mangler.cpp  xi_name_mangler.hpp  xi_pass.cpp  xi_pass.hpp  xi_pass_finalize_types.hpp  (+22 more)
xcc/xi/check/: dorun.sh  fib.xi  make_tests.sh  mm.xi  mul_fi.xi  pow.xi  scratch.xi  test_hello_world.xi
xcc/xi/examples/: vec.xi  vec_2.xi
xcc/xi_old/: Makefile.am  xi.cpp  xi.hpp  xi.lang  xi_builder.cpp  xi_builder.hpp  xi_builder_function.cpp  xi_builder_function.hpp  xi_builder_struct.cpp  xi_builder_struct.hpp  xi_internal.hpp  xi_lower.cpp  xi_lower.hpp  xi_lower_expr.cpp  xi_lower_stmt.cpp  xi_lower_type.cpp  xi_mangler.cpp  xi_mangler.hpp  xi_pass.cpp  xi_pass.hpp  xi_pass_finalize_types.hpp  xi_pass_typecheck.hpp  xi_printer.cpp  xi_typecheck.cpp
xcc/xi_old/check/: mul_fi.xi
xcc/xi_old/examples/: 01_Functions.xi  02_PrimitiveTypes.xi  03_Loops.xi  04_Struct.xi  05_EnumAndMatch.xi  cmath.hxi  fib.xi  scratch.xi  sin.xi  vec.xi
xcc/xpp/: .gitignore  Makefile.am  context.def  parse.cpp  parse.hpp  tokens.def  tree.def  xpp.cpp  xpp.hpp  xpp.lang  xppdef.m4
xilib/include/: cmath.xi  csdtlib.xi  cstdio.xi  iter.hxi  list.hxi  stdio.hxi  stdstring.hxi  string.xi  vector.hxi
